Bug 488984 - when draging tab to content area aEvent.screenX/Y in _onDragEnd is always 0 (breaks tab tearing). r=vlad